@@ -67,6 +67,9 @@ class TrytonConfigParser(ConfigParser.RawConfigParser):
         self.set('session', 'authentications', 'password')
         self.set('session', 'timeout', 600)
         self.set('session', 'max_attempt', 5)
+        self.set('session', 'max_attempt_ip_network', 300)
+        self.set('session', 'ip_network_4', 32)
+        self.set('session', 'ip_network_6', 56)
         self.add_section('password')
         self.set('password', 'length', 8)
         self.set('password', 'entropy', 0.75)
